5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4482/executions/1679_1099.log
== TEST (2019-04-25 16:24:27) 
-- CODE:
a = float(input("digite um numero: "))
b= float (input("digite um numero: "))
c= float (input("digite um numero: "))
print ("Entradas:", a, ",", b, ",", c)	
 else if (a=0, b=0, c=0) 
	else if (a!=0, b=0, c=0)
	 else if (a!=0, b!=0, c!=0)
		else if (a!=0, b=0, c!=0)
-- ERROR:
File "XXXX", line 5
    else if (a=0, b=0, c=0) 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:25:03) 
-- CODE:
a = float(input("digite um numero: "))
b= float (input("digite um numero: "))
c= float (input("digite um numero: "))
print ("Entradas:", a, ",", b, ",", c)	
  if (a=0, b=0, c=0) 
	else if (a!=0, b=0, c=0)
	 else if (a!=0, b!=0, c!=0)
		else if (a!=0, b=0, c!=0)
-- ERROR:
File "XXXX", line 5
    if (a=0, b=0, c=0) 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:25:25) 
-- CODE:
a = float(input("digite um numero: "))
b= float (input("digite um numero: "))
c= float (input("digite um numero: "))
print ("Entradas:", a, ",", b, ",", c)	
 else if (a=0, b=0, c=0) 
	else if (a!=0, b=0, c=0)
	 else if (a!=0, b!=0, c!=0)
		else if (a!=0, b=0, c!=0)
-- ERROR:
File "XXXX", line 5
    else if (a=0, b=0, c=0) 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 16:27:11) 
-- CODE:
a = float(input("digite um numero: "))
b= float (input("digite um numero: "))
c= float (input("digite um numero: "))
print ("Entradas:", a, ",", b, ",", c)	
 else if (a=b=c) 
	else if (a!=0, b=0, c=0)
	 else if (a!=0, b!=0, c!=0)
		else if (a!=0, b=0, c!=0)
-- ERROR:
File "XXXX", line 5
    else if (a=b=c) 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:02:50) 
-- CODE:
a = float(input("digite um numero: "))
b= float (input("digite um numero: "))
c= float (input("digite um numero: "))
print ("Entradas:", a, ",", b, ",", c)	
 else if (a=0, b=0, c=0) 
	else if (a!=0, b=0, c=0)
	 else if (a!=0, b!=0, c!=0)
		else if (a!=0, b=0, c!=0)
-- ERROR:
File "XXXX", line 5
    else if (a=0, b=0, c=0) 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:03:06) 
-- CODE:
a = float(input("digite um numero: "))
b= float (input("digite um numero: "))
c= float (input("digite um numero: "))
print ("Entradas:", a, ",", b, ",", c)	
 
	else if (a=0, b=0, c=0) 
	else if (a!=0, b=0, c=0)
	 else if (a!=0, b!=0, c!=0)
		else if (a!=0, b=0, c!=0)
-- ERROR:
File "XXXX", line 6
    else if (a=0, b=0, c=0) 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 17:03:12) 
-- CODE:
a = float(input("digite um numero: "))
b= float (input("digite um numero: "))
c= float (input("digite um numero: "))
print ("Entradas:", a, ",", b, ",", c)	
 
	 else if (a=0, b=0, c=0) 
	else if (a!=0, b=0, c=0)
	 else if (a!=0, b!=0, c!=0)
		else if (a!=0, b=0, c!=0)
-- EXECUTION TIME:
0.160802
-- ERROR:
  File "/home/codebench/codes/1679/1099/main.py", line 6
    else if (a=0, b=0, c=0) 
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:23:11) 
-- CODE:
a = float(input("digite um numero: "))
b= float (input("digite um numero: "))
c= float (input("digite um numero: "))
print ("Entradas:", a, ",", b, ",", c)	
 
	 else if (a=0, b=0, c=0) 
	else if (a!=0, b=0, c=0)
	 else if (a!=0, b!=0, c!=0)
		else if (a!=0, b=0, c!=0)
-- ERROR:
File "XXXX", line 6
    else if (a=0, b=0, c=0) 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:23:32) 
-- CODE:
a = float(input("digite um numero: "))
b= float (input("digite um numero: "))
c= float (input("digite um numero: "))
print ("Entradas:", a, ",", b, ",", c)	
 
	 else if (a= 0, b= 0, c= 0) 
	else if (a!=0, b=0, c=0)
	 else if (a!=0, b!=0, c!=0)
		else if (a!=0, b=0, c!=0)
-- ERROR:
File "XXXX", line 6
    else if (a= 0, b= 0, c= 0) 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:23:47) 
-- CODE:
a = float(input("digite um numero: "))
b= float (input("digite um numero: "))
c= float (input("digite um numero: "))
print ("Entradas:", a, ",", b, ",", c)	
 
	 else if (a= 0, b= 0, c= 0) 
	else if (a!=0, b=0, c=0)
	 else if (a!=0, b!=0, c!=0)
		else if (a!=0, b=0, c!=0)
-- ERROR:
File "XXXX", line 6
    else if (a= 0, b= 0, c= 0) 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 17:27:24) 
-- CODE:
a = float(input("digite um numero: "))
b= float (input("digite um numero: "))
c= float (input("digite um numero: "))
print ("Entradas:", a, ",", b, ",", c)	
 
	 else if (a=0, b=0, c=0) 
	else if (a!=0, b=0, c=0)
	 else if (a!=0, b!=0, c!=0)
		else if (a!=0, b=0, c!=0)
-- ERROR:
File "XXXX", line 6
    else if (a=0, b=0, c=0) 
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
